# pong-ai

./: CLAUDE.md  main.py  play_manual.py  pyproject.toml  requirements.txt  terminator.py  train_pong.py
pong_tensorboard/DQN_run1_1/: events.out.tfevents.1774053752.Tommy.19176.0
pong_tensorboard/DQN_run1_2/: events.out.tfevents.1774053898.Tommy.10080.0
pong_tensorboard/DQN_run1_3/: events.out.tfevents.1774053971.Tommy.4680.0
pong_tensorboard/DQN_run1_4/: events.out.tfevents.1774054076.Tommy.12876.0
