[project]
name = "pong-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.4.0",
    "ale-py>=0.11.2",
    "autorom>=0.6.1",
    "certifi>=2026.2.25",
    "charset-normalizer>=3.4.6",
    "click>=8.3.1",
    "cloudpickle>=3.1.2",
    "colorama>=0.4.6",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "farama-notifications>=0.0.4",
    "filelock>=3.25.2",
    "fonttools>=4.62.1",
    "fsspec>=2026.2.0",
    "grpcio>=1.78.0",
    "gymnasium>=1.2.3",
    "idna>=3.11",
    "jinja2>=3.1.6",
    "kiwisolver>=1.5.0",
    "markdown>=3.10.2",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.8",
    "mdurl>=0.1.2",
    "mpmath>=1.3.0",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "packaging>=26.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "protobuf>=7.34.1",
    "psutil>=7.2.2",
    "pygame>=2.6.1",
    "pygments>=2.19.2",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "setuptools>=82.0.1",
    "six>=1.17.0",
    "stable-baselines3>=2.7.1",
    "sympy>=1.14.0",
    "tensorboard>=2.20.0",
    "tensorboard-data-server>=0.7.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.3",
    "urllib3>=2.6.3",
    "werkzeug>=3.1.6",
]
